--- a/index.html
+++ b/index.html
@@ -54,6 +54,44 @@
     </header>
     <!-------------Section-1------------ -->
     <section class="section-1">
+        <!-- ----created img-div and placed text content -->
+        <div class="img-div">
+            <div class="text-div">
+            <h2>WORLD NEWS</h2>
+            <div class="line"></div>
+            <h2>Amazing places in America to visit.</h2>
+            <p class="p-text">For some reason — this country, this city, 
+                this neighborhood, this particular street 
+                —  is the place you are living a majority 
+                of your life in.</p>
+
+            <button type="button">Learn more</button>
+            </div>
+         </div>
+         <!----- created more news div and placed 2 info boxes there---------->
+         <div class="more-news-box">
+            <h2 class="more-news-mainText">MORE NEWS</h2>
+            <div class="more-news-line"></div>
+            <div class="info-boxes">
+                <div class="info-box">
+                    <h3>TRAVEL</h3>
+                    <h3>Article title</h3>
+                    <p>Lorem ipsum dolor sit amet,
+                         ipsum labitur lucilius mel id,
+                          ad has appareat…</p>
+                          <i class="fa-regular fa-clock">  2 min ago</i>
+                </div>
+                <div class="info-box">
+                    <h3>TECHNOLOGY</h3>
+                    <h3>Article title</h3>
+                    <p>Lorem ipsum dolor sit amet,
+                         ipsum labitur lucilius mel id,
+                          ad has appareat…</p>
+                          <i class="fa-regular fa-clock">  2 min ago</i>
+                </div>
+            </div>
+        </div>
+        
 
         
     </section>
