--- a/index.html
+++ b/index.html
@@ -152,6 +152,47 @@
 
     </section>
 
+    <!----------------Section-3 ----------------->
+    <section class="section-3">
+        <h3 class="section-3-headline">HAPPENING NOW</h3>
+        <div class="section-3-mainContent">
+
+            <!-- Section-3 left content -->
+        <div class="happening-now-left">
+            <div class="article-img">
+                <h3>CITY</h3>
+                <h2>Large article title</h2>
+                <p>Lorem ipsum dolor sit amet, in eam odio amet, vix id nullam detracto,
+                     vidit vituperatoribus duo id. Affert detraxit 
+                     voluptatum vis eu, inermis eloquentiam.</p>
+            </div>
+            <div class="article-img">
+                <h3>TRAVEL</h3>
+                <h2>Large article title</h2>
+                <p>Lorem ipsum dolor sit amet, in eam odio amet, vix id nullam detracto,
+                     vidit vituperatoribus duo id. Affert detraxit 
+                     voluptatum vis eu, inermis eloquentiam.</p>
+            </div>
+        </div>
+        <!-- Section-3 right content -->
+        <div class="happening-now-right">
+            <figure>
+                <img class="figure-img" src="images/elephant.png" alt="elephant in sand">
+                <figcaption class="figure-title">Wild animals</figcaption>
+            </figure>
+            <figure>
+                <img class="figure-img" src="images/parrot.png" alt="parrot">
+                <figcaption class="figure-title">Royal birds</figcaption>
+            </figure>
+            <figure>
+                <img class="figure-img" src="images/tom-mussak-1084.png" alt="green forest">
+                <figcaption class="figure-title">Beautiful trips</figcaption>
+            </figure>
+        </div>
+    </div>
+    </section>
+
+
 
    </div>
     
