--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <nav>
             <ul class="ul-tag">
-                <li class="li-tag">HOME</li>
+                <a href="index.html"><li class="li-tag">HOME</li></a>
                 <li class="li-tag">WORLD NEWS</li>
                 <li class="li-tag">PHOTOS</li>
                 <li class="li-tag">CONTACT</li>
@@ -191,6 +191,62 @@
         </div>
     </div>
     </section>
+
+    <!--------------Footer------------->
+    <footer>
+        <div class="logo">
+            <div class="text" style="--j:0;">
+                <span style="--i:0">L</span>
+                <span style="--i:1">O</span>
+                <span style="--i:2">G</span>
+                <span style="--i:3">O</span>
+            </div>
+            <div class="text" style="--j:1;">
+                <span style="--i:0">O</span>
+                <span style="--i:1">K</span>
+                <span style="--i:2">B</span>
+                <span style="--i:3">W</span>
+            </div>
+            <div class="text" style="--j:2;">
+                <span style="--i:0">G</span>
+                <span style="--i:1">W</span>
+                <span style="--i:2">I</span>
+                <span style="--i:3">K</span>
+            </div>
+            <div class="text" style="--j:3;">
+                <span style="--i:0">O</span>
+                <span style="--i:1">N</span>
+                <span style="--i:2">F</span>
+                <span style="--i:3">A</span>
+            </div>
+        </div>
+        <div class="footer-nav">
+            <div class="nav-section">
+            <p>Home</p>
+            <p>Discovery</p>
+            <p>Photos</p>
+            <p>Contact</p>
+        </div>
+        <div class="nav-section">
+            <p>About</p>
+            <p>Help</p>
+            <p>Terms</p>
+            <p>Guidlines</p>
+        </div>
+        <div class="nav-section">
+            <p>Testimonials</p>
+            <p>Advertise</p>
+            <p>Advertise</p>
+            <p>Careers</p>
+        </div>
+        </div>
+        <div class="icons">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter blue-icons"></i>
+            <i class="fa-brands fa-facebook-f blue-icons"></i>
+            <i class="fa-solid fa-earth-americas blue-icons"></i>
+        </div>
+    </footer>
 
 
 
