--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </div>
         <nav>
             <ul class="ul-tag">
-                <a href="index.html"><li class="li-tag">HOME</li></a>
-                <li class="li-tag">WORLD NEWS</li>
+                <a class="home" href="index.html"><li class="li-tag">HOME</li></a>
+                <a href="contact.html"><li class="li-tag">WORLD NEWS</li></a>
                 <li class="li-tag">PHOTOS</li>
                 <li class="li-tag">CONTACT</li>
             </ul>
