contact-html section-3 and footer

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <!--------------Footer------------->
     <footer>
-        <div class="logo">
+        <div class="logo-2">
             <div class="text" style="--j:0;">
                 <span style="--i:0">L</span>
                 <span style="--i:1">O</span>
