--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,84 @@
             </div>
     </section>
     <div class="line"></div>
-
+    <!-- -------Section -3 ------------ -->
+    <section class="section-3">
+        <div class="main-photo">
+            <img src="images/elephant big.png" alt="Elephant in sand"> 
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sodales primis,
+             mollis viverra conubia ligula inceptos laoreet libero tortor, nascetur
+              non habitasse iaculis tempor nec egestas fames augue, platea
+               porta integer nostra curae sed arcu. Nec ut diam vulputate 
+               ante scelerisque ridiculus lobortis orci mi curae himenaeos 
+               quis, senectus curabitur ullamcorper a porttitor nibh 
+               fermentum nisi cum morbi aliquam. Vitae pretium vestibulum 
+               dui gravida in potenti interdum, class rhoncus neque eget magna at<br><br><br>
+            Ullamcorper porttitor non pharetra cursus nisl mollis 
+            pellentesque primis penatibus platea, dictum himenaeos
+             eget mi bibendum ad molestie aliquet curae quis quisque, 
+             nunc duis ac at elementum dui integer viverra tempus.
+              Lacinia bibendum diam senectus egestas nec molestie
+               convallis aenean hac tempus, vivamus purus congue 
+               euismod fringilla cursus donec est eu blandit platea,
+                feugiat vitae netus orci habitant accumsan placerat
+                 morbi nostra.</p>
+    </section>
+    <div class="line"></div>
+    <footer>
+        <div class="logo-2">
+            <div class="text" style="--j:0;">
+                <span style="--i:0">L</span>
+                <span style="--i:1">O</span>
+                <span style="--i:2">G</span>
+                <span style="--i:3">O</span>
+            </div>
+            <div class="text" style="--j:1;">
+                <span style="--i:0">O</span>
+                <span style="--i:1">K</span>
+                <span style="--i:2">B</span>
+                <span style="--i:3">W</span>
+            </div>
+            <div class="text" style="--j:2;">
+                <span style="--i:0">G</span>
+                <span style="--i:1">W</span>
+                <span style="--i:2">I</span>
+                <span style="--i:3">K</span>
+            </div>
+            <div class="text" style="--j:3;">
+                <span style="--i:0">O</span>
+                <span style="--i:1">N</span>
+                <span style="--i:2">F</span>
+                <span style="--i:3">A</span>
+            </div>
+        </div>
+        <div class="footer-nav">
+            <div class="nav-section">
+            <p>Home</p>
+            <p>Discovery</p>
+            <p>Photos</p>
+            <p>Contact</p>
+        </div>
+        <div class="nav-section">
+            <p>About</p>
+            <p>Help</p>
+            <p>Terms</p>
+            <p>Guidlines</p>
+        </div>
+        <div class="nav-section">
+            <p>Testimonials</p>
+            <p>Advertise</p>
+            <p>Advertise</p>
+            <p>Careers</p>
+        </div>
+        </div>
+        <div class="icons">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter blue-icons"></i>
+            <i class="fa-brands fa-facebook-f blue-icons"></i>
+            <i class="fa-solid fa-earth-americas blue-icons"></i>
+        </div>
+    </footer>
 
 </div>
     
