Resolutions and Final Project

--- a/contact.html
+++ b/contact.html
@@ -1,179 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style-contact.css">
+    <link rel="stylesheet" href="css/tablet2.css">
+    <link rel="stylesheet" href="css/mobile-2.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"> -->
     <script src="https://kit.fontawesome.com/b64c1fd979.js" crossorigin="anonymous"></script>
     <title>Welcome to Homepage</title>
 </head>
+
 <body>
     <div class="main-container">
-         <!-------I created Header where i placed main logo and navigation --------- -->
-    <header>
-        <!-- i created logo with i variables  -->
-        <div class="logo">
-            <div class="text" style="--j:0;">
-                <span style="--i:0">L</span>
-                <span style="--i:1">O</span>
-                <span style="--i:2">G</span>
-                <span style="--i:3">O</span>
+        <!-------I created Header where i placed main logo and navigation --------- -->
+        <header>
+            <!-- i created logo with i variables  -->
+            <div class="logo">
+                <div class="text" style="--j:0;">
+                    <span style="--i:0">L</span>
+                    <span style="--i:1">O</span>
+                    <span style="--i:2">G</span>
+                    <span style="--i:3">O</span>
+                </div>
+                <div class="text" style="--j:1;">
+                    <span style="--i:0">O</span>
+                    <span style="--i:1">K</span>
+                    <span style="--i:2">B</span>
+                    <span style="--i:3">W</span>
+                </div>
+                <div class="text" style="--j:2;">
+                    <span style="--i:0">G</span>
+                    <span style="--i:1">W</span>
+                    <span style="--i:2">I</span>
+                    <span style="--i:3">K</span>
+                </div>
+                <div class="text" style="--j:3;">
+                    <span style="--i:0">O</span>
+                    <span style="--i:1">N</span>
+                    <span style="--i:2">F</span>
+                    <span style="--i:3">A</span>
+                </div>
             </div>
-            <div class="text" style="--j:1;">
-                <span style="--i:0">O</span>
-                <span style="--i:1">K</span>
-                <span style="--i:2">B</span>
-                <span style="--i:3">W</span>
+            <div class="hamburger">
+                <div>
+                    <i class="fa-solid fa-bars "></i>
+                </div>
             </div>
-            <div class="text" style="--j:2;">
-                <span style="--i:0">G</span>
-                <span style="--i:1">W</span>
-                <span style="--i:2">I</span>
-                <span style="--i:3">K</span>
-            </div>
-            <div class="text" style="--j:3;">
-                <span style="--i:0">O</span>
-                <span style="--i:1">N</span>
-                <span style="--i:2">F</span>
-                <span style="--i:3">A</span>
-            </div>
-        </div>
-        <nav>
-            <ul class="ul-tag">
-                <a href="index.html"><li class="li-tag">HOME</li></a>
-                <a href="contact.html"><li class="li-tag">WORLD NEWS</li></a>
-                <li class="li-tag">PHOTOS</li>
-                <li class="li-tag">CONTACT</li>
-            </ul>
-        </nav>
-    </header>
-   
-    <section class="section-1">
-        <div class="img-content">
-            <H2>WORLD NEWS</H2>
-        </div>
-        <div class="forms-content">
-            <h3>Select a date</h3>
-            <input type="text" placeholder="enter desired date ">
-            <h3>Enter the first keywords</h3>
-            <input type="text" placeholder="enter keywords">
-            <button >SEARCH</button>
-        </div>
-    </section>
-    <div class="line"></div>
+            <nav class="nav-bar">
+                <ul class="ul-tag">
 
-    <!-- ---------------Section-2 ----------->
-    <section class="section-2">
-        <div class="card">
-            <div class="card-img">
-                <img src="images/avatar.png" alt="mountain">
+                    <li class="li-tag">
+                        <a class="a-tags " href="index.html">HOME</a>
+                    </li>
+
+
+                    <li class="li-tag">
+                        <a class="a-tags home" href="contact.html">WORLD NEWS</a>
+                    </li>
+
+                    <li class="li-tag">
+                        <a class="a-tags" href="">PHOTOS</a>
+                    </li>
+                    <li class="li-tag">
+                        <a class="a-tags" href=""> CONTACT</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <section class="section-1">
+            <div class="img-content">
+                <H2>WORLD NEWS</H2>
             </div>
-            <h2>Phasellus eu nulla malesuada, luctus diam.</h2>
-        </div>
-        <div class="card">
-            <p>Dignissim rutrum ridiculus lacinia phasellus
-                 torquent ad aliquet, nisi dictum cubilia class 
-                 habitasse commodo, semper potenti nec ac per 
-                 egestas. Ac volutpat ullamcorper phasellus 
-                 montes sollicitudin litora ridiculus mi conubia 
-                 inceptos euismod odio curabitur, tortor eros 
-                 porta venenatis facilisis quam blandit in ut 
-                 lobortis consequat justo. Hac libero quisque
-                  tortor conubia iaculis </p>
-        </div>
-        <div class="card">
-            <p>Nascetur himenaeos morbi gravida
-             porta sapien justo aliquam pellentesque dapibus 
-             curae, cursus ultrices suspendisse cras ligula id 
-             aenean vulputate taciti, eleifend eros bibendum 
-             scelerisque lobortis venenatis nulla tristique
-              tempus. Quisque eleifend vulpu </p>
+            <form class="forms-content">
+                <div class="nameInputs">
+                    <input type="text" id="name" name="saxeli" required="required">
+                    <span>Select a date</span>
+                </div>
+                <div class="nameInputs">
+                    <input type="text" id="name" name="saxeli" required="required">
+                    <span>Enter the firts Keywords</span>
+                </div>
+                <button>SEARCH</button>
+            </form>
+        </section>
+        <!-- <div class="line"></div> -->
+
+        <!-- ---------------Section-2 ----------->
+        <section class="section-2">
+            <div class="card circle-img">
+                <div class="card-img">
+                    <img src="images/avatar.png" alt="mountain">
+                </div>
+                <h2>Phasellus eu nulla malesuada, luctus diam.</h2>
             </div>
-    </section>
-    <div class="line"></div>
-    <!-- -------Section -3 ------------ -->
-    <section class="section-3">
-        <div class="main-photo">
-            <img src="images/elephant big.png" alt="Elephant in sand"> 
-        </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sodales primis,
-             mollis viverra conubia ligula inceptos laoreet libero tortor, nascetur
-              non habitasse iaculis tempor nec egestas fames augue, platea
-               porta integer nostra curae sed arcu. Nec ut diam vulputate 
-               ante scelerisque ridiculus lobortis orci mi curae himenaeos 
-               quis, senectus curabitur ullamcorper a porttitor nibh 
-               fermentum nisi cum morbi aliquam. Vitae pretium vestibulum 
-               dui gravida in potenti interdum, class rhoncus neque eget magna at<br><br><br>
-            Ullamcorper porttitor non pharetra cursus nisl mollis 
-            pellentesque primis penatibus platea, dictum himenaeos
-             eget mi bibendum ad molestie aliquet curae quis quisque, 
-             nunc duis ac at elementum dui integer viverra tempus.
-              Lacinia bibendum diam senectus egestas nec molestie
-               convallis aenean hac tempus, vivamus purus congue 
-               euismod fringilla cursus donec est eu blandit platea,
+            <div class="card text">
+                <p>Dignissim rutrum ridiculus lacinia phasellus
+                    torquent ad aliquet, nisi dictum cubilia class
+                    habitasse commodo, semper potenti nec ac per
+                    egestas. Ac volutpat ullamcorper phasellus
+                    montes sollicitudin litora ridiculus mi conubia
+                    inceptos euismod odio curabitur, tortor eros
+                    porta venenatis facilisis quam blandit in ut
+                    lobortis consequat justo. Hac libero quisque
+                    tortor conubia iaculis </p>
+            </div>
+            <div class="card text">
+                <p>Nascetur himenaeos morbi gravida
+                    porta sapien justo aliquam pellentesque dapibus
+                    curae, cursus ultrices suspendisse cras ligula id
+                    aenean vulputate taciti, eleifend eros bibendum
+                    scelerisque lobortis venenatis nulla tristique
+                    tempus. Quisque eleifend vulpu </p>
+            </div>
+        </section>
+        <div class="line"></div>
+        <!-- -------Section -3 ------------ -->
+        <section class="section-3">
+            <div class="main-photo">
+                <img src="images/elephant big.png" alt="Elephant in sand">
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sodales primis,
+                mollis viverra conubia ligula inceptos laoreet libero tortor, nascetur
+                non habitasse iaculis tempor nec egestas fames augue, platea
+                porta integer nostra curae sed arcu. Nec ut diam vulputate
+                ante scelerisque ridiculus lobortis orci mi curae himenaeos
+                quis, senectus curabitur ullamcorper a porttitor nibh
+                fermentum nisi cum morbi aliquam. Vitae pretium vestibulum
+                dui gravida in potenti interdum, class rhoncus neque eget magna at<br><br><br>
+                Ullamcorper porttitor non pharetra cursus nisl mollis
+                pellentesque primis penatibus platea, dictum himenaeos
+                eget mi bibendum ad molestie aliquet curae quis quisque,
+                nunc duis ac at elementum dui integer viverra tempus.
+                Lacinia bibendum diam senectus egestas nec molestie
+                convallis aenean hac tempus, vivamus purus congue
+                euismod fringilla cursus donec est eu blandit platea,
                 feugiat vitae netus orci habitant accumsan placerat
-                 morbi nostra.</p>
-    </section>
-    <div class="line"></div>
-    <footer>
-        <div class="logo-2">
-            <div class="text" style="--j:0;">
-                <span style="--i:0">L</span>
-                <span style="--i:1">O</span>
-                <span style="--i:2">G</span>
-                <span style="--i:3">O</span>
+                morbi nostra.</p>
+        </section>
+        <div class="line"></div>
+        <footer>
+            <div class="logo-2">
+                <div class="text" style="--j:0;">
+                    <span style="--i:0">L</span>
+                    <span style="--i:1">O</span>
+                    <span style="--i:2">G</span>
+                    <span style="--i:3">O</span>
+                </div>
+                <div class="text" style="--j:1;">
+                    <span style="--i:0">O</span>
+                    <span style="--i:1">K</span>
+                    <span style="--i:2">B</span>
+                    <span style="--i:3">W</span>
+                </div>
+                <div class="text" style="--j:2;">
+                    <span style="--i:0">G</span>
+                    <span style="--i:1">W</span>
+                    <span style="--i:2">I</span>
+                    <span style="--i:3">K</span>
+                </div>
+                <div class="text" style="--j:3;">
+                    <span style="--i:0">O</span>
+                    <span style="--i:1">N</span>
+                    <span style="--i:2">F</span>
+                    <span style="--i:3">A</span>
+                </div>
             </div>
-            <div class="text" style="--j:1;">
-                <span style="--i:0">O</span>
-                <span style="--i:1">K</span>
-                <span style="--i:2">B</span>
-                <span style="--i:3">W</span>
+            <div class="footer-nav">
+                <div class="nav-section">
+                    <p>Home</p>
+                    <p>Discovery</p>
+                    <p>Photos</p>
+                    <p>Contact</p>
+                </div>
+                <div class="nav-section">
+                    <p>About</p>
+                    <p>Help</p>
+                    <p>Terms</p>
+                    <p>Guidlines</p>
+                </div>
+                <div class="nav-section">
+                    <p>Testimonials</p>
+                    <p>Advertise</p>
+                    <p>Advertise</p>
+                    <p>Careers</p>
+                </div>
             </div>
-            <div class="text" style="--j:2;">
-                <span style="--i:0">G</span>
-                <span style="--i:1">W</span>
-                <span style="--i:2">I</span>
-                <span style="--i:3">K</span>
+            <div class="icons">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter blue-icons"></i>
+                <i class="fa-brands fa-facebook-f blue-icons"></i>
+                <i class="fa-solid fa-earth-americas blue-icons"></i>
             </div>
-            <div class="text" style="--j:3;">
-                <span style="--i:0">O</span>
-                <span style="--i:1">N</span>
-                <span style="--i:2">F</span>
-                <span style="--i:3">A</span>
-            </div>
-        </div>
-        <div class="footer-nav">
-            <div class="nav-section">
-            <p>Home</p>
-            <p>Discovery</p>
-            <p>Photos</p>
-            <p>Contact</p>
-        </div>
-        <div class="nav-section">
-            <p>About</p>
-            <p>Help</p>
-            <p>Terms</p>
-            <p>Guidlines</p>
-        </div>
-        <div class="nav-section">
-            <p>Testimonials</p>
-            <p>Advertise</p>
-            <p>Advertise</p>
-            <p>Careers</p>
-        </div>
-        </div>
-        <div class="icons">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter blue-icons"></i>
-            <i class="fa-brands fa-facebook-f blue-icons"></i>
-            <i class="fa-solid fa-earth-americas blue-icons"></i>
-        </div>
-    </footer>
+        </footer>
 
-</div>
-    
+    </div>
+    <script>
+        hamburger = document.querySelector(".hamburger");
+        hamburger.onclick = function () {
+            nav = document.querySelector(".nav-bar");
+            nav.classList.toggle("active");
+        }
+
+    </script>
 </body>
+
 </html>
